# starter-kits

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md
.licenses/: LICENSE-CC-BY-SA-40  LICENSE-MIT
log-ledger/: cookiecutter.json
log-ledger/{{ cookiecutter.folder }}/: .editorconfig  .gitattributes  .gitignore  README.md  mk-my-day.sh  poetry.toml  pyproject.toml
log-ledger/{{ cookiecutter.folder }}/.cibs/: run.sh
log-ledger/{{ cookiecutter.thing }}/: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  mk-my-day.sh  poetry.toml  pyproject.toml  save-my-day.sh
log-ledger/{{ cookiecutter.thing }}/.licenses/: LICENSE-CC-BY-SA-40  LICENSE-MIT
log-ledger/{{ cookiecutter.thing }}/docs/: .config  Kconfig  Makefile  conf.py  htaccess.yaml  index.rst  plantuml.config  puppeteer-config.json  references.bib
log-ledger/{{ cookiecutter.thing }}/docs/web_root/: .htaccess
log-ledger/{{ cookiecutter.thing }}/sphinx-contrib/pre-post-build/: README.md
log-ledger/{{ cookiecutter.thing }}/sphinx-contrib/pre-post-build/src/pre_post_build/: __init__.py
log-ledger/{{ cookiecutter.thing }}/sphinx-contrib/toctree-only/: README.md
log-ledger/{{ cookiecutter.thing }}/sphinx-contrib/toctree-only/src/toctree_only/: __init__.py
log-ledger/{{ cookiecutter.thing }}/sphinx-contrib/web-access-ctrl/: README.md
log-ledger/{{ cookiecutter.thing }}/sphinx-contrib/web-access-ctrl/src/web_access_ctrl/: create-htaccess-entries.py  group_members.py  shared_groups.py
vscode-git-text-cc-sa-by-sa-mit/: cookiecutter.json
vscode-git-text-cc-sa-by-sa-mit/{{ cookiecutter.folder }}/: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md
(+27 files in other folders)
